syntax = "proto3";

option csharp_namespace = "RestaurantClientLib.Grpc";

service Restaurant {
  rpc GetDishes (GetDishesRequest) returns (GetDishesResponse);
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
}

message GetDishesRequest {}

message GetDishesResponse {
  bool success = 1;
  string error_message = 2;
  repeated Dish dishes = 3;
}

message Dish {
  string code = 1;
  string name = 2;
  double price = 3;
}

message PlaceOrderRequest {
  repeated OrderItem items = 1;
}

message OrderItem {
  string dish_code = 1;
  int32 quantity = 2;
}

message PlaceOrderResponse {
  bool success = 1;
  string error_message = 2;
}